<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.frags.CreateProfile.CompanyLogo">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/car_elevation_small"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/company_logo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_png_or_jpg_file_max_size_of_300_kb" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <FrameLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            android:layout_width="350dp"
                            android:layout_height="350dp"
                            android:layout_gravity="center"

                            android:layout_weight="1"
                            android:src="@drawable/ic_mperson"
                            app:civ_border_color="#4E4E4E"
                            app:civ_border_width="2dp" />

                        <ImageView

                            android:id="@+id/statusImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"

                            android:src="@android:drawable/ic_menu_camera" />
                    </FrameLayout>


                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/grad_color_2"
                        app:cardCornerRadius="20dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="16dp"
                            android:text="Upload"
                            android:textColor="@color/white" />
                    </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/previous"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/grad_color_1"
                        app:cardCornerRadius="@dimen/card_corner_radius"
                        app:cardElevation="@dimen/car_elevation_small"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="16dp"
                            android:text="@string/back"
                            android:textColor="@color/white" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/grad_color_2"
                        app:cardCornerRadius="@dimen/card_corner_radius"
                        app:cardElevation="@dimen/car_elevation_small"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="16dp"
                            android:text="Next"
                            android:textColor="@color/white" />
                    </androidx.cardview.widget.CardView>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>