<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.frags.CreateProfile.BussinessType">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/car_elevation_small"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="TYPE OF BUSINESS"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Select anyone which define your business" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/manufacture"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                             
                                android:layout_weight="1"

                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_manufacuring"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/manufacturer"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/wholesaller"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_forklift"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/wholeseller"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                         
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/retailer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                             
                                android:layout_weight="1"
                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_retail"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/trader_retailer"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/pharma"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_medicine"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/pharma_chemist"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/traveller"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                             
                                android:layout_weight="1"
                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_travel"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/travelling_agency"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/serviceProvider"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_service"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/service_provider"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/other"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:cardCornerRadius="@dimen/card_corner_radius"
                                app:cardElevation="@dimen/car_elevation_small"
                                app:cardUseCompatPadding="true">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="70dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_other"
                                        app:tint="@color/grad_color_2" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="8dp"
                                        android:text="@string/others"
                                        android:textColor="@color/grad_color_2" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>


                        <androidx.cardview.widget.CardView
                            android:id="@+id/next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            app:elevation="@dimen/car_elevation"
                            android:visibility="gone"
                            app:cardBackgroundColor="@color/grad_color_2"
                            app:cardCornerRadius="8dp"
                            app:cardUseCompatPadding="true">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="16dp"
                                android:text="&gt;"
                                android:textColor="@color/white" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>